# Sentry

./: .gitignore  README.md  autoaim.sh  base.sh  get_map.sh  nav.sh  robotTest.sh  save_map.sh  sim.sh  slam.sh  strategy.sh
src/robot_base/: CMakeLists.txt  package.xml
src/robot_base/include/: HandlerUtils.hpp  goalExample.h  info_process.h  msgExample.h
src/robot_base/include/control/: crc_m.h
src/robot_base/launch/: base_control.launch  bringup.launch  static_tf.launch
src/robot_base/src/: info_process.cpp  motor.cpp  send_aim.cpp  send_control.cpp
src/robot_nav/: CMakeLists.txt  package.xml
src/robot_nav/launch/: dynamic_nav.launch  robot_nav.launch  rviz.launch  sim_slam.launch  slam.launch
src/robot_nav/rviz/: default.rviz
src/robot_nav/scripts/: goal_delayer.py
src/robot_nav/yaml/: costmap_common_params.yaml  dwa_local_planner_params.yaml  dynamic_global_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/robot_sim/: control.py
src/robot_sim/livox_laser_simulation/src/: livox_points_plugin.cpp
src/robot_sim/livox_laser_simulation/urdf/: backup_livox_horizon.urdf.xacro  backup_livox_mini360.urdf.xacro  livox_mid360.urdf.xacro  multi_horizon.xacro  platform.urdf.xacro
src/robot_sim/vehicle_simulator/: CMakeLists.txt  package.xml
src/robot_sim/vehicle_simulator/launch/: gazebo.launch  livox_rm.launch  pseudo_params.launch
src/robot_sim/vehicle_simulator/urdf/: base_car.urdf.xacro  base_drive.gazebo  mecanum_base.xacro  robot.urdf.xacro  sentry.gazebo.xacro  sentry.urdf.xacro
src/robot_sim/vehicle_simulator/world/: myrm.world  official_rm.world
src/robot_slam/FAST_LIO/: CMakeLists.txt
src/robot_slam/FAST_LIO/config/: rm_simu.yaml  simu.yaml  (+1 more)
src/robot_slam/FAST_LIO_LOCALIZATION/: CMakeLists.txt  PCD
src/robot_slam/map_tf/: CMakeLists.txt  package.xml
src/robot_slam/map_tf/cfg/: TFConfig.cfg
src/robot_slam/map_tf/launch/: map_tf.launch
src/robot_slam/map_tf/scripts/: map_tf.py
src/robot_strategy/: CMakeLists.txt  package.xml
src/robot_strategy/launch/: strategy.launch
src/robot_strategy/scripts/: controler.py
src/robot_util/lidar_filter/: CMakeLists.txt  package.xml
src/robot_util/lidar_filter/src/: lidar_filter.cpp
(+25 files in other folders)
