<package>
  <name>vehicle_simulator</name>
  <version>0.0.1</version>
  <description>Vehicle Simulator</description>
  <maintainer email="radiancelin@qq.com">rad</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>

  <export>
    <!-- path to models -->
    <gazebo_ros gazebo_model_path="${prefix}/world"/>
  </export>
</package>
